JS Fix (#350)
* Licence

#341 all Major Contributors to the site have agreed to this MIT Licence. any outstanding people who have not accepted change parts of the side that are no longer being used

* Update Licence.md

* Navigation Page Update

# PUG
## index.pug
Fixed small bug with thin container being overlapped by splat img.
## default.pug
Added FAF logo to mobile navbar.

# SASS
## _navigation.sass

Mobile navbar received some styling updates, icons and text got more padding for less mistakes in smartphone touch. Created styling for the FAF logo on mobile navbar.

## index.sass
Improved improvement container so its responsive to screen size (making itself 3, 2 or 1 columns depending on how big the screen is).

# Images
New faction and resource pattern images added for mobile navbar

* JS Fix + Minor Update

# PUG
## index.pug
Made the rectangle containers more compact (easier to read).

# SASS
## _navigation.sass

topnav received an increase in font size for better readability

## index.sass
Reduced padding of rectangle container text so it is more compact.

# JS
## index.js
Fixed issues with ACU cards caused by the previous deletion of other elements on the pug page (multiple and slide containers) without the deletion of their javascript functions. Causing JS to stop working due to not finding elements that don't exist.

--- a/public/styles/general/_navigation.sass
+++ b/public/styles/general/_navigation.sass
@@ -151,7 +151,7 @@ ul
   grid-template-columns: repeat(12, max-content)
   grid-template-rows: minmax(10px, 1fr)
   color: var(--color-gray)
-  font-size: calc(var(--paragraph-font-size) / 1.2)
+  font-size: calc(var(--paragraph-font-size))
   background-color: var(--color-black)
   padding: 0.6em
   position: relative
