--- a/public/styles/site/index.sass
+++ b/public/styles/site/index.sass
@@ -508,7 +508,7 @@
 
 .mainRectangleContainer
   margin: 2vw 0vw 2vw 25vw
-
+  
   background: linear-gradient(180deg, #111111 0%, #1a1a1a 100%)
   gap: 10px
   align-items: center
@@ -525,7 +525,9 @@
 .rectangleContainer
   text-align: left
   .responsiveTextTitle
-    padding: 1em
+    padding: 0.75em
+    .responsiveText
+      padding: 0.25em 0
     
 
 .rectangleItem
@@ -534,8 +536,9 @@
 
 
 
-#rectangleImage
+.rectangleImage
   transition: 1s
+
 
 /* Here you can find stuff related to splitImage containers but in regards to the factions
 
